<resources>
    <string name="app_name">2Games</string>
    <string name="senku_botom_name">Senku</string>
    <string name="botom_name_2048">2048</string>
    <string name="Texto_Principal">Select Game</string>
    <string name="Title2048">2048</string>
    <string name="reset">Reset</string>
    <string name="senkuTitulo">Senku</string>
    <string name="back">Back</string>
    <string name="undomove">undoMove</string>
    <string name="Login_Usuario">Introduce el Usuario</string>
    <string name="texto_Login_Contraseña">Introduce la contraseña</string>
    <string name="Boton_Login_iniciar">Iniciar</string>
    <string name="boton_Login_Registrarse">Registrarse</string>
    <string name="confirmar_contrase">Confirmar Contraseña</string>
    <string name="boton_volver_registro">Volver</string>
    <string name="boton_registro">Resgistrarse</string>
    <string name="titulo_menu">Seleccion tu juego</string>
    <string name="tiempo">Time</string>
    <string name="tituloSettings">AJUSTES</string>

    <array name="itemsImage">
        <item>@drawable/logo2048</item>
        <item>@drawable/senkulogo</item>
        <item>@drawable/logoajustes</item>
    </array>
</resources>